# typhoon-lang

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
.github/workflows/: test.yml
llm/: implementation_plan.md  spec.md
runtime/: atomic.h  io_driver.c  io_driver.h  platform.h  runtime.c  scheduler.c  scheduler.h  ty_ctx.S  ty_io.c  ty_mem.c  ty_mem.h  ty_net.c  ty_net.h
sample/: main.ty
src/: ast.rs  codegen.rs  desugar.rs  driver.rs  lexer.rs  lib.rs  liveness.rs  main.rs  parser.rs  resolver.rs  type_inference.rs
